spiner added fixed spinner for dark mode

--- a/tehnoTransport/src/styles/dashboard.css
+++ b/tehnoTransport/src/styles/dashboard.css
@@ -10,9 +10,38 @@
   border-right: 2px solid rgb(247, 247, 247);
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 .adminIcon {
   position: absolute;
   top: 1rem;
   right: 1rem;
+}
+
+.upcoming {
+  color: green;
+}
+.dueSoon {
+  color: orange;
+}
+.overdue {
+  color: red;
+}
+.progress-bars {
+  margin-top: 20px;
+}
+
+.progress-bar {
+  margin-bottom: 10px;
+}
+
+.bar {
+  width: 100%;
+  background-color: #f0f0f0;
+  border-radius: 8px;
+}
+
+.fill {
+  height: 10px;
+  border-radius: 8px;
 }
